# rose-project-templates

./: README.md
template-project-v1/: Makefile  README  makefile2  makefile3  myTranslator.cpp  set.rose
template-project-v2/: ChangeLog  Makefile  Makefile.am  PrintNamesPlugin.cpp  README  build  cleanup.sh  configure.ac  set.rose  test1.cpp
template-project-v3/: AUTHORS  COPYING  Makefile.am  README  build  cleanup.sh  configure.ac
template-project-v3/config/: Makefile.for.ROSE.includes.and.libs  readme  support-boost.m4  support-installed-rose.m4
